# 1.5.0

## Enhancements

 * Carbon now requires PowerShell 3.
 
### Network

 * Added [Get-IPAddress](http://get-carbon.org/help/Get-IPAddress.html) function for getting the IPv4/IPv6 addresses currently in use on the local computer's network interfaces.
 
# 1.4.0 (10 August 2013)

## Enhancements

### File System

 * Created [Install-Junction](http://get-carbon.org/help/Install-Junction.html) function for creating new and/or updating existing junctions. This is a more idempotent way of creating junctions, as opposed to [New-Junction](http://get-carbon.org/help/New-Junction.html) and [Remove-Junction](http://get-carbon.org/help/Remove-Junction.html) which report errors if a junction already exists or doesn't exist, respectively.

### IIS

 * Objects returned by [Get-IisWebsite](http://get-carbon.org/help/Get-IisWebsite.html) now have a dynamic `PhysicalPath` script property, so you don't have to traverse down into the default application's default virtual directory object to get it.
 * [Install-IisApplication](http://get-carbon.org/help/Install-IisApplication.html), [Install-IisWebsite](http://get-carbon.org/help/Install-IisWebsite.html), and [Install-IisVirtualDirectory](http://get-carbon.org/help/Install-VirtualDirectory.html) now canonicalize physical paths, i.e. they convert any path with a relative part (e.g. '..') to a full path.  It turns out IIS doesn't like paths with relative parts.
 * Created [Get-IisApplication](http://get-carbon.org/help/Get-IisApplication.html) function to get `Microsoft.Web.Administration.Application` objects for all or specific applications under a website.
 * [Install-IisApplication](http://get-carbon.org/help/Install-IisApplication.html) now uses the `Microsoft.Web.Administration` API instead of `appcmd.exe`.
 
### PowerShell
