@@ -2,11 +2,16 @@
 
 ## Enhancements
 
- * Carbon now requires PowerShell 3.
- 
 ### Network
 
  * Added [Get-IPAddress](http://get-carbon.org/help/Get-IPAddress.html) function for getting the IPv4/IPv6 addresses currently in use on the local computer's network interfaces.
+
+## Bug Fixes
+
+### Certificates
+
+ * [Get-Certificate](http://get-carbon.org/help/Get-Certificate.html) throws an exception and halts script execution when loading a certificate file with a private key and the user doesn't have permission to write to Windows' MachineKeys directory.
+ 
  
 # 1.4.0 (10 August 2013)
 
